--- a/css/styles.css
+++ b/css/styles.css
@@ -257,6 +257,7 @@ footer {
 
 .logo {
     height: 100%;
+    z-index: 11;
     /* margin-block: 1em 0.5em; */
 }
 
@@ -266,19 +267,29 @@ footer {
     margin-block: 0.5em;
 }
 
-#primary-nav-menu {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5em;
+#primary-nav-btn {
+    position: relative;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* gap: 0.5em; */
     width: 40px;
+    height: 30px;
+    z-index: 11;
 }
 
-#primary-nav-menu > * {
+#primary-nav-btn > * {
+    position: absolute;
     height: 5px;
     width: 100%;
     background-color: var(--clr-primary-200);
     border-radius: 5px;
+    transition: all 200ms ease;
 }
+
+#primary-nav-btn > *:nth-child(2) {top: calc(50% - 2.5px);}
+#primary-nav-btn > *:nth-child(3) {bottom: 0;}
+
+
 
 #primary-nav {
     display: flex;
@@ -380,16 +391,20 @@ footer {
 @media only screen and (max-width: 1000px) {
 
     #primary-nav {
-        --displace-nav: 105vh;
+        /* --displace-nav: 105vh; */
         position: absolute;
-        top: calc(-1 * var(--displace-nav));
+        /* top: calc(-1 * var(--displace-nav) + 60px); */
+        top: calc(var(--height-header) - 5px);
         left: 0;
         flex-direction: column;
         row-gap: 2rem;
         width: 100vw;
-        height: 100vh;
+        height: 0vh;
         overflow: hidden;
-        z-index: 100;
+        z-index: 10;
+        transition: height 350ms ease-in-out;
+        transform-origin: top;
+        /* scale: 1 0; */
     }
 
     .fa-xmark {
@@ -437,8 +452,25 @@ footer {
     }
     
     .show-nav {
-        transform: translateY(var(--displace-nav));
+        height: 100vh!important;
+        /* background-color: var(--clr-secondary-1000); */
     }
+    
+    .nav-search {
+        margin-block: 2rem;
+        margin-inline: 2rem;
+    }
+
+    [aria-expanded="true"] > * {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transition: all 200ms ease;
+    }
+    [aria-expanded="true"] > *:nth-child(1) {rotate: 45deg}
+    [aria-expanded="true"] > *:nth-child(3) {rotate: -45deg;}
+    [aria-expanded="true"] > *:nth-child(2) {opacity: 0;}
+
 }
 
 @media only screen and (min-width: 1001px) {
@@ -483,14 +515,9 @@ footer {
         display: none;
     }
 
-    #primary-nav-menu {
+    #primary-nav-btn {
         display: none;
     }
-
-    /* .nav-close {
-        display: none;
-    } */
-
 }
 
 /* modal for clicked images */
